RESOLVED FIXED116543
[BlackBerry] Reveal HTTP error code for XHR even if there is no response body
https://bugs.webkit.org/show_bug.cgi?id=116543
Summary [BlackBerry] Reveal HTTP error code for XHR even if there is no response body
Leo Yang
Reported 2013-05-21 08:54:28 PDT
BlackBerry is doing friendly http error handling: if there is no response body for an http error it will display an error message made by the port. But for XHR request, which is not usually displaying error messages to the end user, we should reveal http error code to let the JS know what is the actual server error.
Attachments
Patch (3.40 KB, patch)
2013-05-21 09:17 PDT, Leo Yang
no flags
Leo Yang
Comment 1 2013-05-21 09:17:01 PDT
Alexey Proskuryakov
Comment 2 2013-05-21 09:49:15 PDT
Comment on attachment 202440 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=202440&action=review > Source/WebCore/ChangeLog:14 > + BlackBerry is doing friendly HTTP error handling: if there is no response body > + for an HTTP error it will display an error message made by the port. But for a > + XHR request, which usually does not result in displaying error messages to the > + end user, HTTP error code should be revealed to let the JavaScript know what > + the actual server error code is. Shouldn't the difference be "main resource vs. any subresource"? There is no user visible error reporting for any subresources, not just XHR.
Leo Yang
Comment 3 2013-05-21 10:28:15 PDT
Comment on attachment 202440 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=202440&action=review >> Source/WebCore/ChangeLog:14 >> + the actual server error code is. > > Shouldn't the difference be "main resource vs. any subresource"? There is no user visible error reporting for any subresources, not just XHR. As far as I know only XHR may care about the actual status code in this case. Extends to the subresource might be a good idea but I need to evaluate the potential negative impact.
Leo Yang
Comment 4 2013-05-22 08:00:36 PDT
Comment on attachment 202440 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=202440&action=review >>> Source/WebCore/ChangeLog:14 >>> + the actual server error code is. >> >> Shouldn't the difference be "main resource vs. any subresource"? There is no user visible error reporting for any subresources, not just XHR. > > As far as I know only XHR may care about the actual status code in this case. Extends to the subresource might be a good idea but I need to evaluate the potential negative impact. Based on no-unnecessary-change, I'd like to keep current error handling for subresource `AS IS`.
Rob Buis
Comment 5 2013-05-27 08:11:45 PDT
Comment on attachment 202440 [details] Patch Okay.
Leo Yang
Comment 6 2013-05-27 08:41:06 PDT
Comment on attachment 202440 [details] Patch Sending to cq.
WebKit Commit Bot
Comment 7 2013-05-27 08:44:57 PDT
Comment on attachment 202440 [details] Patch Clearing flags on attachment: 202440 Committed r150759: <http://trac.webkit.org/changeset/150759>
WebKit Commit Bot
Comment 8 2013-05-27 08:44:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.